--- a/currency-app/src/app/app.component.html
+++ b/currency-app/src/app/app.component.html
@@ -4,5 +4,5 @@
 <!--  <app-input-converter></app-input-converter>-->
 <!--  <app-input-converter></app-input-converter>-->
 </div>
-
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="square-jelly-box" [fullScreen]="true"></ngx-spinner>
 <router-outlet></router-outlet>
